--- a/api/package.json
+++ b/api/package.json
@@ -7,5 +7,8 @@
     "server": "node --watch server.js"
   },
   "author": "Cy-POS Cengiz YILMAZ",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
